--- a/source/profile.page
+++ b/source/profile.page
@@ -13,7 +13,7 @@ URL: profile/index.html
 -   My advisor is [Alex Fukunaga](http://metahack.org/).
 -   Research Interest : Artificial Intelligence, Automated Planning and Scheduling, Heuristic Search.
     -   See [Publications](../publications/) for more details.
--   [CV](../static/cv.pdf)
+-   [CV](/static/cv.pdf)
 
 ## Past Interests
 
