fixed the template

--- a/source/themes/mine/base.tmpl
+++ b/source/themes/mine/base.tmpl
@@ -20,7 +20,7 @@
   <body>
     <div class="navigation">
       <span class="sitenav">
-        <a href="{$config.domain}">{$config.title}</a>
+        <a href="/">{$config.title}</a>
       </span>
       {foreach $link in $config.sitenav}
       <span class="sitenav">
