templates with file local variables

--- a/source/themes/mine/base.tmpl
+++ b/source/themes/mine/base.tmpl
@@ -2,6 +2,11 @@
 
 {template base}
 <!doctype html>{\n}
+<!--
+Local Variables:
+mode : html
+End:
+-->
 <html lang="{$config.lang}">
   <head>
     <title>{$config.title}</title>
