--- a/source/themes/mine/post.tmpl
+++ b/source/themes/mine/post.tmpl
@@ -1,6 +1,11 @@
 {namespace coleslaw.theme.mine}
 
 {template post}
+<!--
+Local Variables:
+mode : html
+End:
+-->
 <div class="article-meta">{\n}
   <h1 class="title">{$post.title}</h1>{\n}
   <div class="tags">{\n}
