--- a/source/themes/mine/index.tmpl
+++ b/source/themes/mine/index.tmpl
@@ -6,34 +6,34 @@
 Local Variables:
 mode : html
 End:
--->
+-->{\n}
 {foreach $obj in $index.content}
-  <div class="article-meta">
-    <a class="article-title" href="/{$obj.url}">{$obj.title}</a>
-    <div class="date"> posted on {$obj.date}</div>
-    <div class="article">{$obj.excerpt |noAutoescape}</div>
-  </div>
+  <div class="article-meta">{\n}
+    <a class="article-title" href="/{$obj.url}">{$obj.title}</a>{\n}
+    <div class="date"> posted on {$obj.date}</div>{\n}
+    <div class="article">{$obj.excerpt |noAutoescape}</div>{\n}
+  </div>{\n}
 {/foreach}
 <div id="relative-nav">
   {if $prev} <a href="/{$prev.url}">Previous</a> {/if}
   {if $next} <a href="/{$next.url}">Next</a> {/if}
-</div>
+</div>{\n}
 {if $tags}
 <div id="tagsoup">
-  <p>This blog covers
+  This blog covers
     {foreach $tag in $tags}
-      <a href="/{$tag.url}">{$tag.name}</a>{nil}
+      <a href="/{$tag.url}">{$tag.name}</a>
       {if not isLast($tag)},{sp}{/if}
     {/foreach}
-</div>
+</div>{\n}
 {/if}
 {if $months}
 <div id="monthsoup">
-  <p>View content from
+  View content from
     {foreach $month in $months}
-      <a href="/{$month.url}">{$month.name}</a>{nil}
+      <a href="/{$month.url}">{$month.name}</a>
       {if not isLast($month)},{sp}{/if}
     {/foreach}
-</div>
+</div>{\n}
 {/if}
 {/template}
