--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -14,11 +14,18 @@ body {
 #content {
     background: BlanchedAlmond;
     padding-top: 1em;
-    
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60em;
 }
-span.sitenav:not(:last-child):after {
-    content: '|';
+.navigation {
+    font-size: 1.2em;
+    border-bottom: 1px solid;
+    span.sitenav:not(:last-child):after {
+        content: '|';
+    }
 }
+
 a {
     text-decoration: none;
     color: #992900;
@@ -59,10 +66,6 @@ a {
         font-size: 1.8em;
         font-weight: 800;
     }
-}
-.navigation {
-    font-size: 1.2em;
-    border-bottom: 1px solid;
 }
 pre {
     overflow: auto;
