--- a/source/themes/mine/post.tmpl
+++ b/source/themes/mine/post.tmpl
@@ -25,8 +25,10 @@ End:
 <div class="article-content">{\n}
   {$post.text |noAutoescape}
 </div>{\n}
-<div class="relative-nav">{\n}
-  {if $prev} <a href="/{$prev.url}">Previous</a><br> {/if}{\n}
-  {if $next} <a href="/{$next.url}">Next</a><br> {/if}{\n}
-</div>{\n}
+<nav>
+  <div class="relative-nav">{\n}
+    {if $prev} <a href="/{$prev.url}">Previous</a><br> {/if}{\n}
+    {if $next} <a href="/{$next.url}">Next</a><br> {/if}{\n}
+  </div>{\n}
+</nav>
 {/template}
