--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -1,46 +1,38 @@
 body {
   background-color: #333;
-  font-family: Helvetica, Noto Sans; }
+  font-family: Helvetica, Noto Sans;
+  font-size: 14px; }
 
-@media screen and (min-width: 200px) and (max-width: 300px) {
+@media screen and (min-width: 0px) {
   body {
-    font-size: 3.4px; } }
-@media screen and (min-width: 300px) and (max-width: 400px) {
+    font-size: 1.75px; } }
+@media screen and (min-width: 100px) {
   body {
-    font-size: 5.1px; } }
-@media screen and (min-width: 400px) and (max-width: 500px) {
+    font-size: 3.5px; } }
+@media screen and (min-width: 200px) {
   body {
-    font-size: 6.8px; } }
-@media screen and (min-width: 500px) and (max-width: 600px) {
+    font-size: 5.25px; } }
+@media screen and (min-width: 300px) {
   body {
-    font-size: 8.5px; } }
-@media screen and (min-width: 600px) and (max-width: 700px) {
+    font-size: 7px; } }
+@media screen and (min-width: 400px) {
   body {
-    font-size: 10.2px; } }
-@media screen and (min-width: 700px) and (max-width: 800px) {
+    font-size: 8.75px; } }
+@media screen and (min-width: 500px) {
   body {
-    font-size: 11.9px; } }
-@media screen and (min-width: 800px) and (max-width: 900px) {
+    font-size: 10.5px; } }
+@media screen and (min-width: 600px) {
   body {
-    font-size: 13.6px; } }
-@media screen and (min-width: 900px) and (max-width: 1000px) {
+    font-size: 12.25px; } }
+@media screen and (min-width: 700px) {
   body {
-    font-size: 15.3px; } }
-@media screen and (min-width: 1000px) and (max-width: 1100px) {
-  body {
-    font-size: 17px; } }
-@media screen and (min-width: 1100px) and (max-width: 1200px) {
-  body {
-    font-size: 18.7px; } }
-@media screen and (min-width: 1200px) and (max-width: 1300px) {
-  body {
-    font-size: 20.4px; } }
+    font-size: 14px; } }
 #content {
   background: BlanchedAlmond;
   padding-top: 1em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 60em; }
+  max-width: 55em; }
 
 .navigation {
   font-size: 1.2em;
@@ -58,13 +50,13 @@ a {
 .title {
   margin-left: 1em; }
 
+article {
+  padding: 3em; }
+
 .article-meta {
-  margin-left: 2.2em;
   margin-bottom: 2.2em; }
 .article-title {
   font-size: 2em; }
-.article-content {
-  margin-left: 2.2em; }
 
 .fineprint {
   text-align: center;
