--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -1,12 +1,12 @@
 body {
     background-color: #333;
     font-family: Helvetica, Noto Sans;
+    font-size: 14px;
 }
-
-@for $i from 2 through 12 {
-    @media screen and (min-width: $i*100px) and (max-width: (1+$i)*100px) {
+@for $i from 1 through 8 {
+    @media screen and (min-width: ($i - 1)*100px) {
         body {
-            font-size: $i*1.7px;
+            font-size: $i*1.75px;
         }
     }
 }
@@ -16,8 +16,9 @@ body {
     padding-top: 1em;
     margin-left: auto;
     margin-right: auto;
-    max-width: 60em;
+    max-width: 55em;
 }
+
 .navigation {
     font-size: 1.2em;
     border-bottom: 1px solid;
@@ -36,16 +37,15 @@ a {
 .title {
     margin-left: 1em;
 }
+article {
+    padding : 3em;
+}
 .article {
     &-meta {
-        margin-left: 2.2em;
         margin-bottom: 2.2em;
     }
     &-title {
         font-size: 2em;
-    }
-    &-content {
-        margin-left: 2.2em;
     }
 }
 .fineprint {
