--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -34,38 +34,19 @@ a {
 .date {
     font-style: italic;
 }
-.title {
-    margin-left: 1em;
-}
 article {
     padding : 3em;
-}
-.article {
-    &-meta {
+    header {
         margin-bottom: 2.2em;
-    }
-    &-title {
-        font-size: 2em;
+        h1 {
+            font-size: 2.2em;
+        }
     }
 }
 .fineprint {
     text-align: center;
     font-size: .9em;
     margin-top: .5em;
-}
-.tag {
-    &-low {
-        font-size: .8em;
-        font-weight: 200;
-    }
-    &-medium {
-        font-size: 1.2em;
-        font-weight: 600;
-    }
-    &-high {
-        font-size: 1.8em;
-        font-weight: 800;
-    }
 }
 pre {
     overflow: auto;
