--- a/source/themes/mine/index.tmpl
+++ b/source/themes/mine/index.tmpl
@@ -8,10 +8,12 @@ mode : html
 End:
 -->{\n}
 {foreach $obj in $index.content}
-<article class="article-meta">{\n}
-  <a class="article-title" href="/{$obj.url}">{$obj.title}</a>{\n}
-  <div class="date"> posted on {$obj.date}</div>{\n}
-  <div class="article">{$obj.excerpt |noAutoescape}</div>{\n}
+<article>{\n}
+  <header>
+    <h1><a href="/{$obj.url}">{$obj.title}</a></h1>{\n}
+    <div class="date"> posted on {$obj.date}</div>{\n}
+  </header>
+  <div class="excerpt">{$obj.excerpt |noAutoescape}</div>{\n}
 </article>{\n}
 {/foreach}
 
