--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -2,6 +2,7 @@ body {
     background-color: #333;
     font-family: Helvetica, Noto Sans;
     font-size: 14px;
+    margin: 0;
 }
 @for $i from 1 through 8 {
     @media screen and (min-width: $i*105px) {
@@ -21,19 +22,28 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 55em;
+    margin-top: 5em;
+    
 }
 
 .navigation {
-    font-size: 1.2em;
-    // border-bottom: 1px solid;
-    background-color: lightgrey;
-    color: grey;
-    text-shadow: 1px 1px 1px black;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    padding: 0.5em;
+    // font-size: 1.2em;
+    border-bottom: 1px solid;
+    background-color: BlanchedAlmond;
+    color: black;
+    text-shadow: 1px 1px 1px grey;
     a {
         color: gray;
     }
     span.sitenav:not(:last-child):after {
         content: '|';
+    .title {
+        font-size: 2em;
+    }
     }
 }
 
