--- a/source/themes/mine/base.tmpl
+++ b/source/themes/mine/base.tmpl
@@ -24,7 +24,7 @@ End:
   </head>{\n}
   <body>{\n}
     <nav class="navigation">{\n}
-      <span class="sitenav"> <a href="/">{$config.title}</a> </span>{\n}
+      <span class="title"> <a href="/">{$config.title}</a> </span>{\n}
       {foreach $link in $config.sitenav}
       <span class="sitenav">
         {if $link.relative}
