--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -1,7 +1,8 @@
 body {
   background-color: #333;
   font-family: Helvetica, Noto Sans;
-  font-size: 14px; }
+  font-size: 14px;
+  margin: 0; }
 
 @media screen and (min-width: 105px) {
   body {
@@ -32,15 +33,22 @@ body {
   padding-top: 1em;
   margin-left: auto;
   margin-right: auto;
-  max-width: 55em; }
+  max-width: 55em;
+  margin-top: 5em; }
 
 .navigation {
-  font-size: 1.2em;
-  background-color: lightgrey;
-  color: grey;
-  text-shadow: 1px 1px 1px black; }
+  width: 100%;
+  position: fixed;
+  top: 0;
+  padding: 0.5em;
+  border-bottom: 1px solid;
+  background-color: BlanchedAlmond;
+  color: black;
+  text-shadow: 1px 1px 1px grey; }
   .navigation a {
     color: gray; }
+  .navigation .title {
+    font-size: 2em; }
   .navigation span.sitenav:not(:last-child):after {
     content: '|'; }
 
