--- a/source/themes/mine/base.tmpl
+++ b/source/themes/mine/base.tmpl
@@ -12,8 +12,9 @@ End:
     <title>{$config.title}</title>{\n}
     <meta http-equiv="content-type" content="text/html; charset={$config.charset}" />{\n}
     <meta name="viewport" content="width=device-width, initial-scale=1">{\n}
-    <link href="//fonts.googleapis.com/css?family=Vollkorn:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css" />{\n}
-    <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css" />{\n}
+    <!-- <link href="//fonts.googleapis.com/css?family=Vollkorn:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css" />{\n} -->
+    <!-- <link href="//fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css" />{\n} -->
+    <link href= "/css/font-awesome.min.css" rel="stylesheet" type="text/css" />{\n}
     <link href= "/css/style.css" rel="stylesheet" type="text/css" />{\n}
     <link rel="alternate" href="/rss.xml" type="application/rss+xml" />{\n}
     {if $injections.head}
