--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #333;
+  background-color: #373737;
   font-family: Helvetica, Noto Sans;
   font-size: 14px;
   margin: 0; }
@@ -30,6 +30,7 @@ body {
     font-size: 14px; } }
 #content {
   background: BlanchedAlmond;
+  color: #373737;
   padding-top: 1em;
   margin-left: auto;
   margin-right: auto;
@@ -41,23 +42,16 @@ body {
   position: fixed;
   top: 0;
   padding: 0.5em;
+  font-size: 2em;
   border-bottom: 1px solid;
-  background-color: BlanchedAlmond;
-  color: black;
+  background: BlanchedAlmond;
+  color: #373737;
   text-shadow: 1px 1px 1px grey; }
-  .navigation a {
-    color: gray; }
   .navigation .title {
-    font-size: 2em; }
-  .navigation span.sitenav:not(:last-child):after {
-    content: '|'; }
-
-a {
-  text-decoration: none;
-  color: darkred; }
-
-.date {
-  font-style: italic; }
+    font-size: 2em;
+    left: 0; }
+  .navigation span.sitenav {
+    margin: 2em; }
 
 article {
   padding: 3em; }
@@ -65,6 +59,13 @@ article {
     margin-bottom: 2.2em; }
     article header h1 {
       font-size: 2.2em; }
+
+a {
+  text-decoration: none;
+  color: darkred; }
+
+.date {
+  font-style: italic; }
 
 .fineprint {
   text-align: center;
