--- a/source/themes/mine/index.tmpl
+++ b/source/themes/mine/index.tmpl
@@ -2,25 +2,26 @@
 
 {template index}
 
+<!-- inside main -->
 <!--
 Local Variables:
 mode : html
 End:
   -->{\n}
-<article>
-<header>{\n}
-<h1 class="title">{$index.title}</h1>
-</header>
 
-{foreach $obj in $index.content}
-<div class="content">{\n}
-  <h1><a href="/{$obj.url}">{$obj.title}</a></h1>{\n}
-  <div class="date"> posted on {$obj.date}</div>{\n}
-  <div class="excerpt">{$obj.excerpt |noAutoescape}</div>{\n}
-</div>{\n}
-{/foreach}
+<article class="index">
+  <header>{\n}
+    <h1 class="pagetitle">{$index.title}</h1>{\n}
+  </header>{\n}
 
-<article>
+  {foreach $obj in $index.content}
+  <div class="index-entry">{\n}
+    <h1><a href="/{$obj.url}">{$obj.title}</a></h1>{\n}
+    <div class="date"> posted on <time>{$obj.date}</time></div>{\n}
+    <div class="excerpt">{$obj.excerpt |noAutoescape}</div>{\n}
+  </div>{\n}
+  {/foreach}
+</article>
 
 
 <nav>{\n}
