--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -1,9 +1,4 @@
-body {
-  background-color: #373737;
-  font-family: Helvetica, Noto Sans;
-  font-size: 14px;
-  margin: 0; }
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:300");
 @media screen and (min-width: 105px) {
   body {
     font-size: 1.75px; } }
@@ -28,52 +23,72 @@ body {
 @media screen and (min-width: 840px) {
   body {
     font-size: 14px; } }
-#content {
-  background: BlanchedAlmond;
-  color: #373737;
-  padding-top: 1em;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 55em;
-  margin-top: 5em; }
-
-.navigation {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  padding: 0.5em;
-  font-size: 2em;
-  border-bottom: 1px solid;
-  background: BlanchedAlmond;
-  color: #373737;
-  text-shadow: 1px 1px 1px grey; }
-  .navigation .title {
-    font-size: 1.32em;
-    font-weight: bold;
-    left: 0; }
-  .navigation div.sitenav {
-    display: inline-block; }
-  .navigation span.sitenav {
-    margin: 1em; }
-
-article {
-  padding: 3em; }
-  article header {
-    margin-bottom: 2.2em; }
-    article header h1 {
-      font-size: 2.2em; }
+body {
+  background-color: #2e3434;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  margin: 0; }
+  body nav.navigation {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    padding: 0.5em;
+    font-size: 2em;
+    border-bottom: 1px solid;
+    background: #3e4444;
+    color: #c0ded9;
+    text-shadow: 1px 1px 1px grey; }
+    body nav.navigation a {
+      color: #c0ded9; }
+      body nav.navigation a:hover {
+        color: #eaece5; }
+    body nav.navigation ul {
+      margin: 0;
+      padding: 0;
+      text-align: center; }
+      body nav.navigation ul li {
+        display: inline-block;
+        font-size: 0.5em;
+        width: 8em; }
+        body nav.navigation ul li i.fa {
+          font-size: 1.5em; }
+    body nav.navigation .title {
+      /* font-size: 1.32em; */
+      margin-bottom: 0.5em; }
+  body main {
+    background: #3e4444;
+    color: #c0ded9;
+    padding-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 55em;
+    margin-top: 5em; }
+    body main article {
+      padding: 3em; }
+      body main article header {
+        margin-bottom: 2.2em; }
+        body main article header h1.pagetitle {
+          font-size: 2.2em;
+          font-weight: normal; }
+      body main article h1 {
+        font-weight: normal; }
+      body main article.index .index-entry {
+        /* &:nth-child(even) { */
+        /*     background-color: $background2 + #101010; */
+        /* } */ }
+    body main nav {
+      padding: 3em; }
+  body footer {
+    text-align: center;
+    font-size: .9em;
+    margin-top: .5em; }
 
 a {
   text-decoration: none;
-  color: darkred; }
+  color: #eaece5; }
 
 .date {
   font-style: italic; }
-
-.fineprint {
-  text-align: center;
-  font-size: .9em;
-  margin-top: .5em; }
 
 pre {
   overflow: auto;
