--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -6,17 +6,16 @@
 // $background2:#ffffff;
 // $text2:#dcd0c0;
 
-$highlight:darkred;
-$background1:#373737;
-$background2:BlanchedAlmond;
-$text:#373737;
+// $highlight:darkblue;
+// $background1:#373737;
+// $background2: #f4f4f4;
+// $text:#373737;
 
-body {
-    background-color: $background1;
-    font-family: Helvetica, Noto Sans;
-    font-size: 14px;
-    margin: 0;
-}
+$highlight:   #eaece5;
+$background1: #2e3434;
+$background2: #3e4444;
+$text:        #c0ded9;
+
 @for $i from 1 through 8 {
     @media screen and (min-width: $i*105px) {
         body {
@@ -25,49 +24,93 @@ body {
     }
 }
 
-#content {
-    background: $background2;
-    color: $text;
-    padding-top: 1em;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 55em;
-    margin-top: 5em;
-}
 
-.navigation {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    padding: 0.5em;
-    font-size: 2em;
-    border-bottom: 1px solid;
-    background: $background2;
-    color: $text;
-    text-shadow: 1px 1px 1px grey;
-    .title {
-        font-size: 1.32em;
-        font-weight: bold;
-        // margin-right: auto;
-        left: 0;
-    }
-    div.sitenav {
-        display: inline-block;
-    }
-    span.sitenav {
-        margin: 1em;
-        // &:not(:last-child):after {
-        //     content: '|';
-        // }
-    }
-}
-article {
-    padding : 3em;
-    header {
-        margin-bottom: 2.2em;
-        h1 {
-            font-size: 2.2em;
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
+body {
+    background-color: $background1;
+    font-family: 'Roboto', sans-serif;   // , Helvetica, Arial,'Lucida Grande', Meiryo, メイリオ, sans-serif
+    font-size: 14px;
+    margin: 0;
+
+    nav.navigation {
+        width: 100%;
+        position: fixed;
+        top: 0;
+        padding: 0.5em;
+        font-size: 2em;
+        border-bottom: 1px solid;
+        background: $background2;
+        color: $text;
+        text-shadow: 1px 1px 1px grey;
+
+        a {
+            color: $text;
+            &:hover {
+                color: $highlight;
+            }
         }
+        ul {
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            li {
+                display : inline-block;
+                font-size: 0.5em;
+                width : 8em;
+                i.fa {
+                    font-size : 1.5em;
+                }
+            }
+        }
+        .title {
+            /* font-size: 1.32em; */
+            // font-weight: bold;
+            margin-bottom: 0.5em; 
+        }
+    }
+
+    main {
+        background: $background2;
+        color: $text;
+        padding-top: 1em;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 55em;
+        margin-top: 5em;
+        article {
+            padding : 3em;
+            header {
+                margin-bottom: 2.2em;
+                h1.pagetitle {
+                    font-size: 2.2em;
+                    font-weight: normal;
+                }
+            }
+            h1 {
+                font-weight: normal;
+            }
+            &.index {
+                .index-entry {
+                    /* &:nth-child(even) { */
+                    /*     background-color: $background2 + #101010; */
+                    /* } */
+                }
+            }
+            &.post {
+                
+            }
+        }
+        nav {
+            padding : 3em;
+        }
+
+    }
+
+    footer {
+        text-align: center;
+        font-size: .9em;
+        margin-top: .5em;
     }
 }
 
@@ -77,11 +120,6 @@ a {
 }
 .date {
     font-style: italic;
-}
-.fineprint {
-    text-align: center;
-    font-size: .9em;
-    margin-top: .5em;
 }
 pre {
     overflow: auto;
