--- a/source/themes/mine/css/style.css
+++ b/source/themes/mine/css/style.css
@@ -1,34 +1,34 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300");
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Montserrat");
 @media screen and (min-width: 105px) {
   body {
-    font-size: 1.75px; } }
+    font-size: 2px; } }
 @media screen and (min-width: 210px) {
   body {
-    font-size: 3.5px; } }
+    font-size: 4px; } }
 @media screen and (min-width: 315px) {
   body {
-    font-size: 5.25px; } }
+    font-size: 6px; } }
 @media screen and (min-width: 420px) {
   body {
-    font-size: 7px; } }
+    font-size: 8px; } }
 @media screen and (min-width: 525px) {
   body {
-    font-size: 8.75px; } }
+    font-size: 10px; } }
 @media screen and (min-width: 630px) {
   body {
-    font-size: 10.5px; } }
+    font-size: 12px; } }
 @media screen and (min-width: 735px) {
   body {
-    font-size: 12.25px; } }
+    font-size: 14px; } }
 @media screen and (min-width: 840px) {
   body {
-    font-size: 14px; } }
+    font-size: 16px; } }
 body {
   background-color: #2e3434;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
   margin: 0; }
   body nav.navigation {
+    font-family: "Comfortaa", sans-serif;
     width: 100%;
     position: fixed;
     top: 0;
@@ -36,8 +36,7 @@ body {
     font-size: 2em;
     border-bottom: 1px solid;
     background: #3e4444;
-    color: #c0ded9;
-    text-shadow: 1px 1px 1px grey; }
+    color: #c0ded9; }
     body nav.navigation a {
       color: #c0ded9; }
       body nav.navigation a:hover {
@@ -71,7 +70,8 @@ body {
           font-size: 2.2em;
           font-weight: normal; }
       body main article h1 {
-        font-weight: normal; }
+        font-weight: normal;
+        font-family: "Comfortaa", sans-serif; }
       body main article.index .index-entry {
         /* &:nth-child(even) { */
         /*     background-color: $background2 + #101010; */
@@ -79,9 +79,11 @@ body {
     body main nav {
       padding: 3em; }
   body footer {
-    text-align: center;
-    font-size: .9em;
-    margin-top: .5em; }
+    background: #3e4444;
+    color: #c0ded9;
+    margin: .5em auto;
+    max-width: 55em;
+    text-align: center; }
 
 a {
   text-decoration: none;
