--- a/source/themes/mine/css/style.scss
+++ b/source/themes/mine/css/style.scss
@@ -19,21 +19,26 @@ $text:        #c0ded9;
 @for $i from 1 through 8 {
     @media screen and (min-width: $i*105px) {
         body {
-            font-size: $i*1.75px;
+            font-size: $i*2px;
         }
     }
 }
 
+$title-font: 'Comfortaa';
+$text-font: 'Montserrat';
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+// Audiowide Comfortaa Faster One Montserrat Poiret One Raleway Roboto Condensed
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Montserrat');
+// @import url('https://fonts.googleapis.com/css?family=Roboto:300');
 
 body {
     background-color: $background1;
-    font-family: 'Roboto', sans-serif;   // , Helvetica, Arial,'Lucida Grande', Meiryo, メイリオ, sans-serif
-    font-size: 14px;
+    font-family: $text-font, sans-serif;   // , Helvetica, Arial,'Lucida Grande', Meiryo, メイリオ, sans-serif
+    // font-size: 16px;
     margin: 0;
 
     nav.navigation {
+        font-family: $title-font, sans-serif;
         width: 100%;
         position: fixed;
         top: 0;
@@ -42,7 +47,7 @@ body {
         border-bottom: 1px solid;
         background: $background2;
         color: $text;
-        text-shadow: 1px 1px 1px grey;
+        // text-shadow: 1px 1px 1px grey;
 
         a {
             color: $text;
@@ -66,7 +71,7 @@ body {
         .title {
             /* font-size: 1.32em; */
             // font-weight: bold;
-            margin-bottom: 0.5em; 
+            margin-bottom: 0.5em;
         }
     }
 
@@ -89,6 +94,7 @@ body {
             }
             h1 {
                 font-weight: normal;
+                font-family: $title-font, sans-serif;
             }
             &.index {
                 .index-entry {
@@ -108,9 +114,12 @@ body {
     }
 
     footer {
+        background: $background2;
+        color: $text;
+        margin: .5em auto;
+        max-width: 55em;
         text-align: center;
-        font-size: .9em;
-        margin-top: .5em;
+        // font-size: .9em;
     }
 }
 
