--- a/source/themes/mine/base.tmpl
+++ b/source/themes/mine/base.tmpl
@@ -12,8 +12,7 @@ End:
     <title>{$config.title}</title>{\n}
     <meta http-equiv="content-type" content="text/html; charset={$config.charset}" />{\n}
     <meta name="viewport" content="width=device-width, initial-scale=1">{\n}
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    <!-- <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css"> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa|Montserrat">
     <link href= "/css/font-awesome.min.css" rel="stylesheet" type="text/css" />{\n}
     <link href= "/css/style.css" rel="stylesheet" type="text/css" />{\n}
     <link rel="alternate" href="/rss.xml" type="application/rss+xml" />{\n}
